Add divs and line height
to html and css

--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Hero Banner</title>
+  <title>Call to Action</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <main>
-  </main>
-  <footer>
-  </footer>
+  <div class="body-boxbox">
+    <div class="body-box">
+      <img>
+        <div>
+          <img>
+        </div>
+        <div>
+          <h2></h2>
+          <p></p>
+          <a></a>
+        </div>
+      </div>
+  </div>
+
 </body>
 </html>
