Add names to classes
and content to h2, p and a tags

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="body-boxbox">
-    <div class="body-box">
-      <img>
-        <div>
-          <img>
+  <div class="body">
+    <div class="background-img">
+      <img class="background">
+        <div class="img-flex">
+          <img class="banner">
         </div>
-        <div>
-          <h2></h2>
-          <p></p>
-          <a></a>
+        <div class="title">
+          <h2>Ultra Super Fighting Force</h2>
+          <p>Control giant, fighting, transforming robots and save the world!</p>
+          <a class="btn">Join USFF</a>
         </div>
       </div>
   </div>
