Add directory for img tags

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <div class="body">
     <div class="background-img">
-      <img class="background">
+      <img class="background" src="images/placeholder-16by9.svg" alt="">
         <div class="img-flex">
-          <img class="banner">
+          <img class="banner" src="images/mecha.svg" alt="Mech Logo">
         </div>
         <div class="title">
           <h2>Ultra Super Fighting Force</h2>
