Move banner tag
and removed unnecessary tags

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
   <div class="body">
-    <div class="background-img">
-      <img class="background" src="images/placeholder-16by9.svg" alt="">
-        <div class="img-flex">
-          <img class="banner" src="images/mecha.svg" alt="Mech Logo">
-        </div>
-        <div class="title">
-          <h2>Ultra Super Fighting Force</h2>
-          <p>Control giant, fighting, transforming robots and save the world!</p>
-          <a class="btn">Join USFF</a>
-        </div>
+    <div class="banner">
+      <img src="images/placeholder-16by9.svg" alt="">
+      <div class="img-flex">
+        <img src="images/mecha.svg" alt="Mech Logo">
       </div>
+      <div>
+        <h2>Ultra Super Fighting Force</h2>
+        <p>Control giant, fighting, transforming robots and save the world!</p>
+        <a class="btn">Join USFF</a>
+      </div>
+    </div>
   </div>
 
 </body>
