Add elements to tag
to move the box and content ontop of one another

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="body">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     <div class="banner">
-      <img src="images/placeholder-16by9.svg" alt="">
-      <div class="img-flex">
+      <div>
         <img src="images/mecha.svg" alt="Mech Logo">
       </div>
       <div>
@@ -20,6 +20,5 @@
       </div>
     </div>
   </div>
-
 </body>
 </html>
