--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Call to Action</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +14,7 @@
       <div>
         <img src="images/mecha.svg" alt="Mech Logo">
       </div>
-      <div>
+      <div class="content">
         <h2>Ultra Super Fighting Force</h2>
         <p>Control giant, fighting, transforming robots and save the world!</p>
         <a class="btn">Join USFF</a>
