--- a/originals/index2.html
+++ b/originals/index2.html
@@ -2,14 +2,15 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Join USFF</title>
+  <title>Call to Action</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="Banner">
+  <div class="body">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
-    <div class="body">
+    <div class="banner">
       <div>
         <img src="images/mecha.svg" alt="Mech Logo">
       </div>
