--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>Join USFF</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="Banner">
+  <div class="banner">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     <div class="body">
       <div>
@@ -16,7 +17,7 @@
       <div class="content">
         <h2>Ultra Super Fighting Force</h2>
         <p>Control giant, fighting, transforming robots and save the world!</p>
-        <a class="btn">Join USFF</a>
+        <a class="btn" href="#">Join USFF</a>
       </div>
     </div>
   </div>
