--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     <div class="body">
       <div>
-        <img src="images/mecha.svg" alt="Mech Logo">
+        <img class="mecha" src="images/mecha.svg" alt="Mech Logo">
       </div>
       <div class="content">
         <h2>Ultra Super Fighting Force</h2>
