--- a/originals/index.html
+++ b/originals/index.html
@@ -4,20 +4,20 @@
   <meta charset="utf-8">
   <title>Join USFF</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="body">
+  <div class="banner">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
-    <div class="banner">
-      <div class="mecha">
-        <img src="images/mecha.svg" alt="Mech Logo">
+    <div class="body">
+      <div>
+        <img class="mecha" src="images/mecha.svg" alt="Mech Logo">
       </div>
       <div class="content">
         <h2>Ultra Super Fighting Force</h2>
         <p>Control giant, fighting, transforming robots and save the world!</p>
-        <a class="btn">Join USFF</a>
+        <a class="btn" href="#">Join USFF</a>
       </div>
     </div>
   </div>
