--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="body">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     <div class="banner">
-      <div class="mecha">
-        <img src="images/mecha.svg" alt="Mech Logo">
+      <div>
+        <img class="mecha" src="images/mecha.svg" alt="Mech Logo">
       </div>
       <div class="content">
         <h2>Ultra Super Fighting Force</h2>
