--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="body">
-    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="img-flex">
     <div class="banner">
       <div>
         <img class="mecha" src="images/mecha.svg" alt="Mech Logo">
