Add the body tags
and elements.
moved overflow and max-height to img-flex from body

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="css/main2.css" rel="stylesheet">
 </head>
 <body>
+
   <div class="body">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="img-flex">
     <div class="banner">
@@ -17,9 +18,10 @@
       <div class="content">
         <h2>Ultra Super Fighting Force</h2>
         <p>Control giant, fighting, transforming robots and save the world!</p>
-        <a class="btn btn-big" href="">Join USFF</a>
+        <a class="btn btn-big" href="#">Join USFF</a>
       </div>
     </div>
   </div>
+
 </body>
 </html>
