--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-  <div class="body">
+  <div class="banner">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="img-flex">
-    <div class="banner">
+    <div class="content">
       <div>
         <img class="mecha" src="images/mecha.svg" alt="Mech Logo">
       </div>
-      <div class="content">
+      <div class="text">
         <h2>Ultra Super Fighting Force</h2>
         <p>Control giant, fighting, transforming robots and save the world!</p>
         <a class="btn btn-big" href="#">Join USFF</a>
