--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <div class="banner">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="img-flex">
     <div class="content">
-      <img class="mecha" src="images/mecha.svg" alt="Mech Logo">
+      <div class="img-div">
+        <img class="mecha" src="images/mecha.svg" alt="Mech Logo">
+      </div>
       <div class="text">
         <h2>Ultra Super Fighting Force</h2>
         <p>Control giant, fighting, transforming robots and save the world!</p>
