Finish the nightmare

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="img-flex">
     <div class="content">
       <div class="img-div">
-        <img class="mecha" src="images/mecha.svg" alt="Mech Logo">
+        <img class="img-flex" src="images/mecha.svg" alt="Mech Logo">
       </div>
       <div class="text">
         <h2>Ultra Super Fighting Force</h2>
